# DynModeling

./: .clangBK_complete  .clang_complete  .dir-locals.el  .gitignore  CMakeLists.txt  README.md  compile_commands.json
DynModeling.xcodeproj/: project.pbxproj
DynModeling.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
executables/: CMakeLists.txt  drawMovingPoints.cpp  drawPointMovingTest.cpp  drawerTrial.cpp  fileParsing.cpp  pendulumMain.cpp  pendulumTest.cpp  robotScanRetrieving.cpp  slamBehaviour.cpp
files/datasets/: CriticalNoAssociations.txt  criticalIterations.txt  drawDummyDataset.txt  dummyDataSet.txt  exampleDataSetOneline.txt  exampleDataSetTwoLines.txt  first100data.txt
include/: defs.hpp  kd_tree_altered.cpp  structs.hpp
report/: body.tex  frontLayer.tex  report.aux  report.out  report.tex  report.toc
src/: CMakeLists.txt  drawPointMovingTest.cpp  gnuPlotTest.cpp
src/controllers/: Controller.cpp  Controller.hpp
src/drawing/: Drawer.cpp  Drawer.hpp
src/kdtree/: kdTreeAltered.cpp  kdTreeAltered.hpp
src/pendulum/: Pendulum.cpp  Pendulum.hpp
src/slam/: .Graph.cpp.swp  DataAssociator.cpp  DataAssociator.hpp  DatasetManager.cpp  DatasetManager.hpp  Graph.cpp  Graph.hpp  GraphInterface.hpp  Initializator.cpp  Initializator.hpp  LineMatcher.cpp  LineMatcher.hpp  LoopCloser.cpp  LoopCloser.hpp  LoopCloser.tpp  Map.cpp  Map.hpp  Robot.cpp  Robot.hpp  ScanMatcher.cpp  ScanMatcher.hpp  Slam.cpp  Slam.hpp
src/utils/: .Clock.hpp.swo  Clock.cpp  Clock.hpp  ClockInterface.hpp  Ellipse.cpp  Ellipse.hpp  MyMath.cpp  MyMath.hpp
tests/: .test.cpp.swp  CMakeLists.txt  TestGmock.cpp  TestGoogleTest.cpp  TestRunner.cpp  test.cpp
tests/drawing/: CMakeLists.txt  TestDrawer.cpp
tests/kdtree/: TestKdTree.cpp
tests/pendulum/: CMakeLists.txt  TestController.cpp
tests/slam/: CMakeLists.txt  MockGraph.hpp  TestCriticalAssociator.cpp  TestCriticalIterations.cpp  TestDataAssociator.cpp  TestDatasetManager.cpp  TestDrawLines.cpp  TestGraph.cpp  TestLineMatcher.cpp  TestLoopCloser.cpp  TestMap.cpp  TestRobot.cpp  TestScanMatcher.cpp  TestSlam.cpp  TestTuningLineMatcherParams.cpp
tests/utils/: CMakeLists.txt  MockClock.hpp  TestClock.cpp  TestEllipse.cpp  TestMyMath.cpp
